# AnomalibTrainer

./: .gitignore  Backend.py  ExportWorker.py  TrainedModelsModel.py  TrainingWorker.py  main.py  pyproject.toml  pysidedeploy.spec  requirements.txt  training_process.py
AnomalibTrainer/: Main.qml  MainPage.qml  ModelDetailsPage.qml  TrainingPage.qml  qmldir
models/: dinomaly.yaml  efficient_ad.yaml  patchcore.yaml
