[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = ["Backend.py", "ExportWorker.py", "AnomalibTrainer/Main.qml", "AnomalibTrainer/MainPage.qml", "AnomalibTrainer/ModelDetailsPage.qml", "AnomalibTrainer/TrainingPage.qml", "AnomalibTrainer/qmldir", "models/dinomaly.yaml", "models/efficient_ad.yaml", "models/patchcore.yaml", "TrainedModelsModel.py", "TrainingWorker.py", "training_process.py", "main.py"]
